# chemostat

./: .gitignore  README.md  chemostat.cabal  package.yaml  stack.yaml
scripts/: compile_run.sh  profile_compile_run.sh  run_plot.sh
src/: Chemostat.hs  Main.hs  Model0.hs  Util.hs
