name:           chemostat
version:        0.1.0.0
description:    Chemostat model implemented in Haskell
author:         Thaddäus Töppen
build-type:     Simple
cabal-version:  >= 1.10

executable chemostat
  main-is: Main.hs
  other-modules:
      Chemostat
      Model0
      Util
  hs-source-dirs:
      src
  ghc-options: -O2
  build-depends:
      base >=4.10 && <5
    , hmatrix
    , hmatrix-gsl
    , Chart
    , Chart-cairo
    , vector
    , time
    , flow
    , dimensional
  default-language: Haskell2010
